# AudioResolutionAnalyzer

./: .gitmodules  CMakeLists.txt  README.md
AudioResolutionAnalyzer/: AnalysisThread.cpp  AnalysisThread.h  AudioResolutionAnalyzer.cpp  AudioResolutionAnalyzer.h  BitDepth.h  CMakeLists.txt  ConsoleMain.cpp  ConversionMethod.h  FlacFile.cpp  FlacFile.h  FlacFormat.h  Main.cpp  MainWindow.cpp  MainWindow.h  MediaFile.h  MediaFileType.h  Program.cpp  Program.h  RiffChunkHeader.h  RiffSubChunkHeader.h  SampleConverter.h  SampleDumper.cpp  SampleDumper.h  Version.h.in  WaveFile.cpp  WaveFile.h  WaveFormat.h
Prototype/: CMakeLists.txt  Prototype.cpp
docs/: index.html
include/: AnalysisThread.h  AudioResolutionAnalyzer.h  BitDepth.h  ConversionMethod.h  FlacFile.h  FlacFormat.h  MainWindow.h  MediaFile.h  MediaFileType.h  Program.h  SampleConverter.h  SampleDumper.h  WaveFile.h  WaveFormat.h
src/: AnalysisThread.cpp  AudioResolutionAnalyzer.cpp  CMakeLists.txt  ConsoleMain.cpp  FlacFile.cpp  Main.cpp  MainWindow.cpp  Program.cpp  SampleDumper.cpp  Version.h.in  WaveFile.cpp  WaveFormat.cpp
src/prototype/: CMakeLists.txt  Prototype.cpp
